@@ -276,7 +276,7 @@ void Rest::write(Xml& xml) const
 //   Rest::read
 //---------------------------------------------------------
 
-void Rest::read(QDomElement e, const QList<Tuplet*>& tuplets, const QList<Slur*>& slurs)
+void Rest::read(QDomElement e, const QList<Tuplet*>& tuplets, QList<Slur*>* slurs)
       {
       for (e = e.firstChildElement(); !e.isNull(); e = e.nextSiblingElement()) {
             if (!ChordRest::readProperties(e, tuplets, slurs))
